Fix bug with tree pop up not visible

--- a/ContactSimulationViz/styles.css
+++ b/ContactSimulationViz/styles.css
@@ -28,6 +28,10 @@
     padding: 0;
 }
 
+#treeGrid {
+    overflow: visible;
+}
+
 body,
 html {
     height: 100%;
